--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,27 +24,53 @@ services:
       retries: 5
       start_period: 15s
 
-  kafka-producer:
+  producer:
     build: 
       context: .
       dockerfile: Dockerfile
+    ports:
+      - "6002:5000"
     depends_on:
       kafka:
         condition: service_healthy
-    command: python kafka_producer.py
     environment:
-      KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - KAFKA_TOPIC=test-topic
+      - APP_MODE=producer
+      - FLASK_DEBUG=1
+      - PYTHONUNBUFFERED=1
+    volumes:
+      - ./templates:/app/templates
+    healthcheck:
+      test: curl --fail http://localhost:5000/status || exit 1
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
 
-  kafka-consumer:
+  consumer:
     build:
       context: .
       dockerfile: Dockerfile
+    ports:
+      - "6001:5000"
     depends_on:
       kafka:
         condition: service_healthy
-    command: python kafka_consumer.py
     environment:
-      KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - KAFKA_TOPIC=test-topic
+      - APP_MODE=consumer
+      - FLASK_DEBUG=1
+      - PYTHONUNBUFFERED=1
+    volumes:
+      - ./templates:/app/templates
+    healthcheck:
+      test: curl --fail http://localhost:5000/status || exit 1
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
 
 volumes:
   kafka_data: 
