--- a/kube/producer.yaml
+++ b/kube/producer.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kafka-producer
+  labels:
+    app: kafka-producer
 spec:
   replicas: 1
   selector:
@@ -14,10 +16,43 @@ spec:
     spec:
       containers:
       - name: producer
-        image: docker.io/waveywaves/mirrord-queues-debug-ex-producer:latest
-        imagePullPolicy: Always
+        image:  waveywaves/mirrord-kafka-debug-ex:latest
+        imagePullPolicy: Never
+        ports:
+        - containerPort: 5000
         env:
         - name: KAFKA_BOOTSTRAP_SERVERS
-          value: "kafka-0.kafka.default.svc.cluster.local:9092"
-        command: ["python"]
-        args: ["kafka_producer.py"] 
+          value: "kafka:9092"
+        - name: KAFKA_TOPIC
+          value: "test-topic"
+        - name: APP_MODE
+          value: "producer"
+        - name: PYTHONUNBUFFERED
+          value: "1"
+        livenessProbe:
+          httpGet:
+            path: /status
+            port: 5000
+          initialDelaySeconds: 10
+          periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
+        readinessProbe:
+          httpGet:
+            path: /status
+            port: 5000
+          initialDelaySeconds: 5
+          periodSeconds: 10
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: kafka-producer
+spec:
+  selector:
+    app: kafka-producer
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 5000
+  type: LoadBalancer 
