update mirrord configuration

--- a/kube/consumer.yaml
+++ b/kube/consumer.yaml
@@ -22,9 +22,11 @@ spec:
         - containerPort: 5000
         env:
         - name: KAFKA_BOOTSTRAP_SERVERS
-          value: "kafka:9092"
+          value: "kafka-0.kafka.default.svc.cluster.local:9092"
         - name: KAFKA_TOPIC
           value: "test-topic"
+        - name: KAFKA_GROUP_ID
+          value: "test-consumer-group"
         - name: APP_MODE
           value: "consumer"
         - name: PYTHONUNBUFFERED
