--- a/kube/mirrord-kafka-client-config.yaml
+++ b/kube/mirrord-kafka-client-config.yaml
@@ -7,9 +7,11 @@ spec:
   properties:
   - name: bootstrap.servers
     value: kafka-0.kafka.default.svc.cluster.local:9092
-  - name: message.send.max.retries
-    value: "4"
   - name: client.id
     value: mirrord-operator
-  - name: message.send.max.retries
-    value: null
+  - name: security.protocol
+    value: PLAINTEXT
+  - name: request.timeout.ms
+    value: "20000"
+  - name: connections.max.idle.ms
+    value: "300000"
