--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 kafka-python==2.0.2
+six==1.16.0
+confluent-kafka==2.3.0
 flask==3.0.2
 flask-socketio==5.3.6
 python-dotenv==1.0.1
 gunicorn==21.2.0
-eventlet==0.35.2 
+eventlet==0.35.2
+dnspython==2.5.0 
