--- a/kube/producer.yaml
+++ b/kube/producer.yaml
@@ -18,6 +18,7 @@ spec:
       - name: producer
         image:  docker.io/waveywaves/mirrord-kafka-debug-ex:latest
         imagePullPolicy: Always
+        command: ["python", "app.py"]
         ports:
         - containerPort: 9090
         env:
@@ -53,6 +54,6 @@ spec:
     app: kafka-producer
   ports:
     - protocol: TCP
-      port: 80
+      port: 9090
       targetPort: 9090
-  type: LoadBalancer 
+  type: ClusterIP 
