--- a/kube/kafka.yaml
+++ b/kube/kafka.yaml
@@ -31,7 +31,7 @@ spec:
     spec:
       containers:
       - name: kafka
-        image: bitnami/kafka:latest
+        image: bitnamilegacy/kafka:latest
         ports:
         - containerPort: 9092
           name: kafka
